# llm-self-training

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  coverage_detect.json  coverage_s03.json  pyproject.toml
.cursor/: mcp.json.example
.cursor/rules/: audit-mandatory-tools.mdc
apps/api/: pyproject.toml
apps/api/src/llm_api/: __init__.py  main.py
apps/api/src/llm_api/routes/: datalake.py  overview.py  rag.py  training.py
apps/dashboard/: README.md  index.html  package.json
apps/dashboard/src/: App.tsx  index.css
config/: cloud-h100.yaml  cloud.env.example  default.yaml  doc_allowlist.yaml  github-harvest.yaml  redis.local.conf.example  safety-allowlist.yaml
config/modelfiles/: pyro-coder-inform.modelfile
data/cloud/: README.md
data/cloud/personal/: manifest.json
data/cloud/personal/harnesses/: opencode.jsonl  t3code.jsonl
docs/: AUDIT-PROTOCOL.md  AUDIT-REPORT.md  AUDIT-RUNS-2026-05-30.md  OLLAMA-INVENTORY.md  PHASE-1.5-RAG.md  PHASE1-FILTERS.md  PHASE1-RUNBOOK.md  PHASE15-PHASE2-SIGNOFF.md  PHASE2-TRAIN.md  PROJECT-MEMORY.md  PUBLIC-DATASETS.md  TRAIN-DOC-AUDIT.md  TURSO.md  WAREHOUSE-ARCHITECTURE.md  WAREHOUSE-INDEX.md
docs/archive/: PLAN.md  README.md  ROADMAP.md
docs/audits/: CAMPAIGN-R25-500.md  CAMPAIGN-R50-1000.md  README.md  phase1-audit-2026-05-30.jsonl  phase1-audit-2026-05-30.md
docs/cloud/: DATA-FORMATS.md  README.md  VAST.md
docs/oss/: ARCHITECTURE.md  CLOUD-TRAIN.md  CODING-SAFEGUARDS.md  CONFIG-REFERENCE.md  DATA-FORMATS.md  OSS-RELEASE.md  PRODUCT.md  PUBLIC-DATASETS.md  README.md  TURSO.md  USER-GUIDE.md
eval/: last_eval_report.json
eval/internal/: README.md  retrieval_gold.jsonl  tasks_debug.jsonl  tasks_diff_apply.jsonl  tasks_style.jsonl
scripts/: install-flash-attn.sh  parse-public-ordered.sh  phase2-complete.sh  prep-all.sh  redis-local-stop.sh  redis-local.sh  verify-phase15.sh
scripts/cloud/: export-personal-for-git.sh  pack-personal.sh  run-jarvis.sh  run-vast.sh  setup-cloud.sh  setup-jarvis.sh  train-cloud.sh  vast-bootstrap.sh  vast-destroy.sh  vast-onstart.sh  vast-pull.sh
services/logger/: pyproject.toml
services/logger/src/llm_logger/: __init__.py
