[project]
name = "llm-logger"
version = "0.1.0"
description = "OpenAI-compatible proxy logger"
readme = "README.md"
authors = [
    { name = "Olen Latham", email = "olen@latham.cloud" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
llm-logger = "llm_logger:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
